# spaces

./: CHANGELOG.md  Dockerfile  LICENCE  cliff.toml  pyproject.toml  requirements.txt
.github/workflows/: simple-build.yml
src/spaces/: __init__.py  __main__.py  app.py  common.py  crud.py  deps.py  git.py  models.py
src/spaces/cli/: __init__.py  __main__.py  common.py  root.py  serve.py
src/spaces/core/: config.py  db.py  security.py
src/spaces/routes/: __init__.py  auth.py  spaces.py
