[tool.poetry]
name = "spaces"
version = "0.0.1"
description = "A dynamic Git repository space manager"
authors = ["Luca Vivona <lucavivona01@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["git", "docker", "container", "management", "self-host", "nginx"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "0.115.9"
uvicorn = "0.34.0"
sqlmodel = "0.0.22"
pydantic = "2.10.6"
GitPython = "3.1.44"
typer = "0.15.2"
passlib = "1.7.4"
pydantic-settings = "2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
mypy = "*"

[tool.poetry.scripts]
spaces = "spaces.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3